syntax = "proto3";

package helloworld;

option go_package = "/helloworldpb";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
  int32 age = 2;
  bool subscribed = 3;
  float rating = 4;
  repeated string tags = 5;
  bytes avatar = 6;
}

message HelloReply {
  string message = 1;
  int64 user_id = 2;
  double score = 3;
  bool active = 4;
  repeated int32 lucky_numbers = 5;
  map<string, string> metadata = 6;
}
